fix about back btn been covered by header

--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -66,7 +66,7 @@ body {
         right: 0;
         left: 0;
         width: 100%;
-        height: 7vh;
+        height: auto;
         padding: 0;
         z-index: 1039;
     }
